# astrodata

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CITATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.rst  api_short.html  credits.html  genindex.html  index.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  requirements.txt  search.html  searchindex.js  tox.ini
.doctrees/: api_short.doctree  credits.doctree  index.doctree  quickstart.doctree
.doctrees/api/: astrodata.AstroData.doctree  astrodata.AstroDataError.doctree  astrodata.AstroDataMixin.doctree  astrodata.NDAstroData.doctree  astrodata.Section.doctree  astrodata.TagSet.doctree  astrodata.add_header_to_table.doctree  astrodata.astro_data_descriptor.doctree  astrodata.astro_data_tag.doctree  astrodata.create.doctree  astrodata.from_file.doctree  astrodata.open.doctree  astrodata.returns_list.doctree  astrodata.version.doctree
.doctrees/developer/: documentation.doctree  index.doctree  testing.doctree
.doctrees/examples/: index.doctree
.doctrees/examples/gemini_examples/: index.doctree
.doctrees/examples/generic_examples/: index.doctree
.doctrees/examples/quickstart/: index.doctree
.doctrees/manuals/: appendix_descriptors.doctree  cheatsheet.doctree  full_api.doctree  index.doctree
.doctrees/manuals/progmanual/: adclass.doctree  containers.doctree  descriptors.doctree  design.doctree  index.doctree  intro.doctree  tags.doctree
.doctrees/manuals/usermanual/: data.doctree  headers.doctree  index.doctree  intro.doctree  iomef.doctree  structure.doctree  tables.doctree  tags.doctree
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  documentation.md  documentation.yaml  feature_request.md  feature_request.yaml  other-issue.md  other_issue.yaml
.github/workflows/: build_tests.yml  cache_purge.yml  documentation.yml  documentation_tests.yml  integration_tests.yml  lint.yml  nox_testing.yml  publish_pypi.yml  source_tests.yml  testing.yml  todo_to_issue.yml
_modules/: astrodata.html  index.html
_modules/astrodata/: adfactory.html  core.html  fits.html  nddata.html  utils.html
_sources/: api_short.rst.txt  index.rst.txt  quickstart.rst.txt
_sources/api/: astrodata.AstroData.rst.txt  astrodata.AstroDataError.rst.txt  astrodata.AstroDataMixin.rst.txt  astrodata.NDAstroData.rst.txt  astrodata.Section.rst.txt  astrodata.TagSet.rst.txt  astrodata.add_header_to_table.rst.txt  astrodata.astro_data_descriptor.rst.txt  astrodata.astro_data_tag.rst.txt  astrodata.create.rst.txt  astrodata.from_file.rst.txt  astrodata.open.rst.txt  astrodata.returns_list.rst.txt  astrodata.version.rst.txt
_sources/developer/: index.rst.txt
_sources/examples/: index.rst.txt
_sources/examples/quickstart/: index.rst.txt
_sources/manuals/: appendix_descriptors.rst.txt  cheatsheet.rst.txt  full_api.rst.txt  index.rst.txt
_sources/manuals/progmanual/: descriptors.rst.txt  intro.rst.txt  tags.rst.txt
_sources/manuals/usermanual/: data.rst.txt  headers.rst.txt  intro.rst.txt  tags.rst.txt
_static/: documentation_options.js
api/: astrodata.AstroData.html  astrodata.AstroDataError.html  astrodata.AstroDataMixin.html  astrodata.NDAstroData.html  astrodata.Section.html  astrodata.TagSet.html  astrodata.add_header_to_table.html  astrodata.astro_data_descriptor.html  astrodata.astro_data_tag.html  astrodata.create.html  astrodata.from_file.html  astrodata.open.html  astrodata.returns_list.html  astrodata.rst  astrodata.version.html
astrodata/: __init__.py  _version.py  adfactory.py  core.py  factory.py  fits.py  nddata.py  provenance.py  testing.py  utils.py  version.py  wcs.py
astrodata/doc/: appendix_descriptors.rst  conf.py
astrodata/tests/: test_core.py  test_fits.py  test_generic.py  test_nddata.py  test_object_construction.py  test_provenance.py  test_tags.py  test_testing.py  test_utils.py  test_wcs.py
developer/: documentation.html  index.html  testing.html
docs/: conf.py  credits.rst  index.rst  quickstart.rst
docs/developer/: documentation.rst  index.rst  testing.rst
docs/examples/: index.rst
docs/examples/data/: download_example_files.py
docs/examples/gemini_examples/: astrodata_gemini_examples.yml  gmos_data.py  index.rst
docs/examples/generic_examples/: index.rst
docs/manuals/: api.rst  appendix_descriptors.rst  conf.py  conftest.py  full_api.rst  index.rst
docs/manuals/_static/: color_styles.css
docs/manuals/progmanual/: adclass.rst  containers.rst  descriptors.rst  design.rst  intro.rst  tags.rst
docs/manuals/usermanual/: data.rst  headers.rst  intro.rst  iomef.rst  structure.rst  tags.rst
docs/miscellaneous/: pyopensci_response_1.md  pyopensci_submission.md
docs/static/css/: logo_variables.css
examples/: index.html
examples/gemini_examples/: index.html
examples/generic_examples/: index.html
examples/generic_examples/usermanual_structure_examples/: 1_example_structure.html
examples/quickstart/: index.html
licenses/: APACHE2.rst  BSD2.rst  BSD3.rst  GPLv3.rst
manuals/: appendix_descriptors.html  cheatsheet.html  full_api.html  index.html
manuals/progmanual/: adclass.html  containers.html  descriptors.html  design.html  index.html  intro.html  tags.html
manuals/usermanual/: data.html  headers.html  index.html  intro.html  iomef.html  structure.html  tables.html  tags.html
tests/: conftest.py  test_adfactory.py  test_core.py  test_deprecated.py  test_factory.py  test_fits.py  test_generic.py  test_nddata.py  test_object_construction.py  test_provenance.py  test_tags.py  test_testing.py  test_utils.py  test_wcs.py
tests/integration/dragons/: conftest.py  test_calibration_setup.py  test_gmos_imaging.py  test_niri_imaging.py
tests/script_tests/: __init__.py  conftest.py  test_pyproject_scripts.py
tests/test_data/: generate_test_data.py  test_generate_test_data.py
tests/unit/: conftest.py  test_adfactory.py  test_core.py  test_deprecated.py  test_fits.py  test_generic.py  test_nddata.py  test_object_construction.py  test_provenance.py  test_testing.py  test_utils.py  test_wcs.py
(+2 files in other folders)
